# ChangeLog for x11-libs/gtksourceview
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.191 2010/12/07 18:06:12 eva Exp $

  07 Dec 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -gtksourceview-2.6.2.ebuild, -gtksourceview-2.8.2.ebuild:
  Clean up old revisions.

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org>
  gtksourceview-2.10.4.ebuild:
  alpha/ia64/sh/sparc stable wrt #324077

  14 Oct 2010; Markus Meier <maekke@gentoo.org> gtksourceview-2.10.4.ebuild:
  arm stable, bug #324077

  09 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  gtksourceview-2.10.4.ebuild:
  ppc64 stable wrt #324077

*gtksourceview-2.10.5-r1 (05 Oct 2010)

  05 Oct 2010; Mart Raudsepp <leio@gentoo.org> gtksourceview-2.10.4.ebuild,
  -gtksourceview-2.10.5.ebuild, +gtksourceview-2.10.5-r1.ebuild:
  Fix configure flags passing; add ~mips keyword

*gtksourceview-2.10.5 (28 Sep 2010)

  28 Sep 2010; Gilles Dartiguelongue <eva@gentoo.org>
  +gtksourceview-2.10.5.ebuild:
  Version bump. Translation updates.

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org> gtksourceview-2.10.4.ebuild:
  Marked ppc for bug #324077.

  18 Aug 2010; Markus Meier <maekke@gentoo.org> gtksourceview-2.8.2.ebuild:
  arm stable, bug #314899

  16 Aug 2010; Gilles Dartiguelongue <eva@gentoo.org>
  gtksourceview-2.10.4.ebuild:
  Adjust dependencies wrt configure.ac. Disable maintainer mode since it's
  hard enabled in configure.

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> gtksourceview-2.8.2.ebuild:
  alpha/ia64/sh/sparc stable wrt #314899

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  gtksourceview-2.10.4.ebuild:
  x86 stable, bug 324077

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> gtksourceview-2.10.4.ebuild:
  amd64 stable, bug 324077

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  gtksourceview-1.8.5-r1.ebuild, gtksourceview-2.6.2.ebuild,
  gtksourceview-2.8.2.ebuild, gtksourceview-2.10.4.ebuild: