@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/gtksourceview
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.191 2010/12/07 18:06:12 eva Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.192 2011/01/18 15:15:04 fauli Exp $
+
+  18 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
+  gtksourceview-2.10.5-r1.ebuild:
+  x86 stable, bug 348987
 
   07 Dec 2010; Gilles Dartiguelongue <eva@gentoo.org>
   -gtksourceview-2.6.2.ebuild, -gtksourceview-2.8.2.ebuild:
